<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">DroidDailyProject</string>

    <!--<string name="buy_kindle">我想买%s台<xliff:g id="Kindle">Kindle</xliff:g></string>-->

    <plurals name="buy_kindle">
        <!--<item quantity="zero">我不想买<xliff:g id="Kindle">KINDLE</xliff:g>.</item>-->
        <item quantity="one">我想买一台<xliff:g id="Kindle">KINDLE</xliff:g>.
        </item>
        <item quantity="other">我想买%d台<xliff:g id="Kindle">Kindle</xliff:g>.
        </item>
    </plurals>
    <string name="hello_word" translatable="false">Hello</string>

    <string name="much" translatable="false">Adding a Toolbar directly to an AppBarLayout gives you access to the enterAlwaysCollapsed and
        exitUntilCollapsed scroll flags, but not the detailed control on how different elements react to collapsing. For
        that, you can use CollapsingToolbarLayout:
        \n\nThis setup uses CollapsingToolbarLayout’s app:layout_collapseMode="pin" to ensure that the Toolbar itself
        remains pinned to the top of the screen while the view collapses. Even better, when you use
        CollapsingToolbarLayout and Toolbar together,
        the title will automatically appear larger when the layout is fully visible, then transition to its default size
        as it is collapsed. Note that in those cases, you should call setTitle() on the CollapsingToolbarLayout, rather
        than on the Toolbar itself.
    </string>
    <string name="show_loader" translatable="false">show loader</string>
    <string name="switch_label" translatable="false">Switch Status</string>
    <string name="pending_one_shot" translatable="false">One Shot</string>
    <string name="pending_no_create" translatable="false">No Create</string>
    <string name="cancel_current" translatable="false">Cancel Current</string>
    <string name="update_current" translatable="false">Update Current</string>
    <string name="pending_immutable" translatable="false">Immutable</string>
    <string name="label_notification" translatable="false">Notification</string>
    <string name="implicit_intent" translatable="false">Implicit Intent</string>
    <string name="request_stk" translatable="false">Request Stk</string>
    <string name="label_open_stk" translatable="false">Open STK</string>
    <string name="waiting" translatable="false">waiting…</string>
    <string name="label_fragment_one" translatable="false">Fragment One</string>
    <string name="label_fragment_two" translatable="false">Fragment Two</string>
    <string name="label_fragment_three" translatable="false">Fragment Three</string>
    <string name="label_request_loc" translatable="false">Request Location</string>
    <string name="label_load_dialog" translatable="false">Load Dialog</string>
    <string name="label_dialog_act" translatable="false">Dialog Activity</string>
    <string name="label_confirm" translatable="false">Confirm</string>
    <string name="xm" translatable="false">xm</string>

    <string name="duration" translatable="false">%s min</string>
    <string name="lifecycle" translatable="false">Lifecycle</string>
    <string name="txt_double_click" translatable="false">Double Click</string>
    <string name="txt_query" translatable="false">Query</string>
    <string name="txt_insert" translatable="false">Insert</string>
    <string name="txt_update" translatable="false">update</string>
    <string name="txt_delete" translatable="false">Delete</string>
    <string name="txt_one" translatable="false">OneOne</string>
    <string name="txt_12" translatable="false">OneTwo</string>
    <string name="txt_13" translatable="false">OneThree</string>
    <string name="txt_frag_123" translatable="false">Fragment123</string>
    <string name="txt_final_title_summ" translatable="false">Final Title - Summ</string>
    <string name="txt_test_button" translatable="false">Test Button</string>

    <string name="txt_clickable" translatable="false">ewou-<font color="#097">Click me</font>-oauronwo2u3</string>

    <string name="txt_no_accessibility" translatable="false">Accessibility Important auto</string>

    <string name="txt_accessibility" translatable="false">Accessibility Important yes</string>
    <string name="test_keyboard_and_webview">Test keyboard and webview</string>
    <string name="learn_more">Learn more</string>
    <string name="i_am_loader">I am loader</string>
    <string name="feedback">Feedback</string>
    <string name="open_custom_tab">open custom tab</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="test">Test</string>
    <string name="code">Code</string>
    <string name="plans">Plans</string>

</resources>
