<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/tab_container"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/label_frag_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_fragment_one" />

        <TextView
                android:id="@+id/label_frag_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_fragment_two" />

        <TextView
                android:id="@+id/label_frag_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_fragment_three" />

    </LinearLayout>

    <FrameLayout
            android:id="@+id/flay_content"
            android:background="#9999"
            android:layout_above="@id/tab_container"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

</RelativeLayout>