<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />


    <LinearLayout
            android:id="@+id/loader"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="200dp">
        <TextView
                android:text="@string/i_am_loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        <ImageView
                android:id="@+id/logo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/credit_card"
                android:backgroundTint="@color/colorPrimary"
                app:layout_constraintEnd_toStartOf="@+id/des_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
                android:id="@+id/des_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/logo"
                app:layout_constraintTop_toTopOf="parent">
            <TextView
                    android:text="@string/much"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginTop="8dp"
                    android:typeface="sans"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/learn_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>