<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

        <TextView
        android:id="@+id/tvNoAccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:text="@string/txt_no_accessibility" />

        <TextView
        android:id="@+id/tvHasAccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:importantForAccessibility="yes"
        android:text="@string/txt_accessibility" />


        <ca.six.custom.accessibility.SixTextView
                android:id="@+id/tvCustom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="custom text view"/>

        <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="test button" />

        <SeekBar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:progress="60"
        android:secondaryProgress="100" />

        <EditText
        android:focusable="auto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="input something" />

        <WebView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

        <CalendarView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

        <CheckBox
        android:text="Meow"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <CheckedTextView
        android:text="Checked TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <Chronometer
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
                android:importantForAccessibility="yes"
                android:id="@+id/standardRv"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>